# InstaShare

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
Backend/: .env  Dockerfile  Dockerfile.worker  INFO_BIBLIO.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
Backend/app/: .env  alembic.ini  config_sheduler_tasks.py  main.py  models.py  pyproject.toml  scheduler_tasks.py  sheduler_app.py  sheduler_tasks.py  tasks.py
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 0c37042a6bd1_add_user_relationship_to_document.py  3b8fb9fbe1e1_initial_migration.py  4b79c309f46a_add_file_url_and_size_to_document.py  67415370e7fe_add_file_url_and_size_to_document.py  84595d9d94e6_add_file_url_and_size_to_document.py  (+2 more)
Backend/app/app/: check_db.py  main.py
Backend/app/auth/: dependencies.py  jwt.py
Backend/app/core/: __init__.py  _tasks.py  celerybeat-schedule.dir  config.py  main.py  tasks.py
Backend/app/db/: __init__.py  base.py  clean.py  migrations_commands.md  seed.py
Backend/app/models/: __init__.py  document.py  document_shared.py  log.py  role.py  user.py  user_role.py
Backend/app/schemas/: __init__.py  document.py  document_shared.py  log.py  role.py  user.py  user_role.py
Backend/app/services/: __init__.py  document_service.py  log_service.py  role_service.py  user_service.py
Backend/app/sheduler_tasks/: app.py  config.py  tasks.py
Backend/app/test/: _test_user_service.py  conftest.py  test_document_service.py  test_log_service.py  test_role_service.py  test_user_service.py
(+72 files in other folders)
